Fix footnotes overflowing

--- a/src/index.scss
+++ b/src/index.scss
@@ -523,6 +523,10 @@ html {
   }
 }
 
+.footnotes {
+  word-break: break-word;
+}
+
 @media screen and (min-width: 480px) {
   // layout
   .layout {
